@@ -48,6 +48,7 @@ Release 0.1.0
    HBASE-524   Problems with getFull
    HBASE-514   table 'does not exist' when it does
    HBASE-537   Wait for hdfs to exit safe mode
+   HBASE-534   Double-assignment at SPLIT-time
    
   IMPROVEMENTS
    HADOOP-2555 Refactor the HTable#get and HTable#getRow methods to avoid
